# discord-bot

./: .bazelrc  .eslintignore  .eslintrc  .gitignore  .lintstagedrc  .prettierignore  LICENSE  WORKSPACE  package.json  tsconfig.json
patches/: @bazel+typescript+1.1.0.patch
src/: BUILD.bazel  app.module.ts  main.ts
src/blizzard/: BUILD.bazel  blizzard.module.ts  blizzard.service.ts  index.ts  wow.service.ts
src/commands/: BUILD.bazel  character-realm.ts  commands.module.ts  connect.command.ts  disconnect.command.ts
tools/: defaults.bzl
